# dbt-sandbox

./: .dhub.yaml  .gitignore  .talismanrc  LICENSE  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
clusters/my-cluster/: datahub-prereq.yml  datahub-release.yml  datahub-repo.yml
clusters/my-cluster/flux-system/: gotk-sync.yaml
helm/datahub/charts/datahub/: Chart.yaml  values.yaml
helm/datahub/charts/datahub/subcharts/datahub-frontend/: Chart.yaml  values.yaml
helm/datahub/charts/datahub/subcharts/datahub-frontend/templates/: ingress.yaml
helm/datahub/charts/datahub/subcharts/datahub-gms/templates/: ingress.yaml
helm/datahub/charts/prerequisites/: Chart.yaml  values.yaml
models/: customers.sql  stg_customers.sql  stg_orders.sql
models/coned/: properties.yml  usage.py  usage.sql  usage_view.sql
models/global_sales/: count_view.sql  countries_by_total_sales.sql  properties.yml
models/tutorial/: customer_latest_order.sql  customers.sql  properties.yml  stg_customers.sql  stg_orders.sql
seeds/: cned_electric_interval_data_14209895_2020-01-01_to_2020-12-31.csv  cned_electric_interval_data_14209895_2021-01-01_to_2021-09-25.csv  cned_electric_interval_data_14209895_2021-08-01_to_2021-10-29.csv  cned_electric_interval_data_14209895_2021-08-01_to_2022-01-11.csv  cned_electric_interval_data_14209895_2021-12-16_to_2022-01-16.csv  cned_electric_interval_data_14209895_2021-12-25_to_2022-01-25.csv  cned_electric_interval_data_14209895_2022-01-01_to_2022-10-06.csv  cned_electric_interval_data_14209895_2022-09-11_to_2022-10-11.csv  jaffle_shop_customers.csv  jaffle_shop_orders.csv
seeds/coned/: cned_electric_usage.csv
seeds/global_sales/: transactions.csv
seeds/tutorial/: stripe_payments.csv
tests/coned/: type.sql  usage_positive.sql
