[tool.poetry]
name = "coned"
version = "0.1.0"
description = ""
authors = ["Javier Matias-Cabrera <jmatias@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-databricks = "^1.2.3"


[tool.poetry.group.dev.dependencies]
databricks-cli = "^0.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
