[tool.poetry]
name = "dbt-sandbox"
version = "0.1.0"
description = ""
authors = ["Javier Matias-Cabrera <jmatias@thoughtworks.com>"]
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py39']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/notebooks  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.poetry.dependencies]
python = "^3.9"
dbt-databricks = "^1.3.0"
dbt-core = "^1.3.0"


[tool.poetry.group.dev.dependencies]
databricks-cli = ">=0.17.3"
pyspark = "^3.3.0"
black = {extras = ["d"], version = ">=22.10.0"}
great-expectations = ">=0.15.27"
acryl-datahub = {extras = ["dbt"], version = "^0.9.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
